# Neural-Systems

./: .gitignore  README.md  pyproject.toml
01_integrate_and_fire/: README.md  REPORT.md  integrate_and_fire.py
02_adaptive_neuron/: REPORT.md  adaptive_neuron.py  exercise03.py
03_coupled_neurons/: REPORT.md  coupled_neurons.py  exercise04.py
04_neural_mass_model/: REPORT.md  exercise05.py  neural_mass_model.py
05_associative_networks/: REPORT.md  associative_networks_bars.py  associative_networks_basic.py
06_hopfield_reconstruction/: REPORT.md  exercise08.py  hopfield_reconstruction.py
07_hopfield_extensions/: REPORT.md  hopfield_extensions.py
08_backprop_single_hidden_layer/: REPORT.md  chemo.mat  supervised_learning.py
08_supervised_learning/: REPORT.md  exercise10.py  sinapsi.mat
09_mnist_classification/: REPORT.md  mnist_classification.py
10_competitive_networks/: REPORT.md
additional_modules/: README.md
application_materials/: neural_dynamics_cv_language.docx  neural_dynamics_cv_language.md
exercise01_02/: REPORT.md  exercises01_02.py  run_exercises01_02.py
exercise03/: REPORT.md  exercise03.m
exercise04/: REPORT.md  exercise04.m
exercise05/: REPORT.md  exercise05.m
exercise06/: REPORT.md  exercise06.m
exercise07/: REPORT.md  exercise07.m  exercise07.py
exercise08/: REPORT.md  exercise08.m
exercise09/: REPORT.md  exercise09.py  exercise09_1.m  exercise09_2.m  exercise09_3.m
exercise10/: REPORT.md  exercise_10.m
exercise11/: REPORT.md
exercise12/: REPORT.md
exercises06-07/: REPORT.md  exercise06.py
(+73 files in other folders)
