[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-dynamics"
version = "0.1.0"
description = "Modeling neural dynamics from single-neuron spiking to population-level EEG-like activity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
